SERVER-31049 Fix resolution of a view's default collation on mongos.